@@ -1,7 +1,6 @@
 package tgobmdev.videoapi.core.mapper;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Component;
 import tgobmdev.videoapi.core.entity.VideoEntity;
 import tgobmdev.videoapi.dto.request.VideoCreateRequest;
@@ -25,7 +24,7 @@ public class VideoMapper {
   public List<VideoResponse> mapToVideoResponses(List<VideoEntity> videoEntities) {
     return videoEntities.stream() //
         .map(this::mapToVideoResponse) //
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public VideoEntity mapToEntity(VideoCreateRequest videoCreateRequest) {
